name:                sql-table-dependency-finder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/harryxp/sql-table-dependency-finder#readme
license:             BSD3
license-file:        LICENSE
author:              Harry Pan
maintainer:          pan.xingzhi@gmail.com
copyright:           2017 Harry Pan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dependencies
                     , GraphVizGenerator
                     , ParserUtils
                     , SqlParser
  build-depends:       base >= 4.7 && < 5
                     , MissingH >= 1.4.0.1
  default-language:    Haskell2010

executable sql-table-dependency-finder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sql-table-dependency-finder
  default-language:    Haskell2010

test-suite sql-table-dependency-finder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sql-table-dependency-finder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/harryxp/sql-table-dependency-finder
